# genai-scripts

./: Mary_history.json  README.md  embedding.py  pyproject.toml
genai_hackathon/: chat.py
